--- a/scripts/annovar/README
+++ b/scripts/annovar/README
@@ -1,15 +1,16 @@
-The annovar.wdl workflow requires a tar.gz archive containing the annovar database files.
-This archive file must be in a specific format, as follows:
+The annovar.wdl workflow requires a tar.gz archive containing the annovar database files at the top level.
+For example:
 
-    annovar_files/
-    annovar_files/hg38_ensGeneMrna.fa
-    annovar_files/hg38_ensGene.txt
-    annovar_files/hg38_refGeneMrna.fa
-    annovar_files/hg38_refGene.txt
-    annovar_files/hg38_gnomad211_exome.txt
-    annovar_files/hg38_gnomad211_exome.txt.idx
-    annovar_files/hg38_gnomad211_genome.txt
-    annovar_files/hg38_gnomad211_genome.txt.idx
+    tar -tzf annovar_files.tar.gz
+
+        ./hg38_ensGeneMrna.fa
+        ./hg38_ensGene.txt
+        ./hg38_refGeneMrna.fa
+        ./hg38_refGene.txt
+        ./hg38_gnomad211_exome.txt
+        ./hg38_gnomad211_exome.txt.idx
+        ./hg38_gnomad211_genome.txt
+        ./hg38_gnomad211_genome.txt.idx
 
 To build an annovar database archive that is compatable with the annovar.wdl workflow,
 you can use the archive_annovar_files.sh script in this directory, as follows:
